--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "next": "12.0.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "socket.io": "4.5.4",
     "socket.io-client": "4.5.4"
   },
   "license": "MIT",
-  "devDependencies": {},
   "keywords": [],
   "description": ""
 }
